# python-sdk

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  ROADMAP.md  setup.cfg
leotranspiler/: .gitignore  README.md  pyproject.toml  setup.py
leotranspiler/examples/: credit_2_tmp.py  demo_decision_tree.ipynb  demo_decision_tree_credit.ipynb
leotranspiler/examples/decision_trees/: german_credit_dataset.ipynb  iris_dataset.ipynb  mnist_dataset.ipynb  mnist_script_haar_features.py  mnist_script_hog_features.py
leotranspiler/leotranspiler/: __init__.py  _computation_base.py  _helper.py  _input_generator.py  _input_generator_old.py  _leo_helper.py  _model_transpiler.py  leo_transpiler.py  leotranspiler.py  zero_knowledge_proof.py
leotranspiler/tests/: .gitignore  test_input_generator.py  test_leo_transpiler.py
leotranspiler/tests/tree_credit/: .env  program.json
sdk/: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Cargo.toml  Readme.md  aleo.pyi  build-both.sh  build.sh  build_ubuntu.sh  install.sh  pyproject.toml  pytest.ini  test.py
sdk-abi/: .gitignore  Cargo.toml  README.md  pyproject.toml  pytest.ini
sdk-abi/python/aleo_abi/: __init__.py  _aleo_abi.pyi
sdk-abi/python/tests/: test_abi.py
sdk-abi/src/: lib.rs
sdk/.cargo/: config.toml
sdk/benchmarks/: bench_proving.py
sdk/docs/: requirements.txt
sdk/docs/source/: conf.py  examples.rst  index.rst  usage.rst
sdk/python/: test.py
sdk/python/aleo/: __init__.py  __init__.pyi  _aleolib.pyi  _aleolib_mainnet.pyi  _aleolib_testnet.pyi  _client_common.py  _facade_common.py  _scanner_common.py  abi.py  aleo.pyi  async_network_client.py  async_record_scanner.py  encryptor.py  mainnet.py  mainnet.pyi  network_client.py  record_scanner.py  security.py  test.py  testnet.py  testnet.pyi
sdk/python/aleo/codegen/: __init__.py  __main__.py  _emit.py  runtime.py
sdk/python/aleo/facade/: __init__.py  account.py  async_client.py  call.py  client.py  errors.py  network.py  programs.py  provider.py  records.py
sdk/python/aleo/testing/: __init__.py  devnode.py  local_scanner.py
sdk/python/examples/: facade_quickstart.py
sdk/python/tests/: conftest.py  test_abi_hook.py  test_account.py  test_account_class.py  test_account_parity.py  test_algebra.py  test_algorithms.py  test_chain_data.py  test_codegen_cli.py  test_codegen_emit.py  test_codegen_runtime.py  test_encryptor.py  test_facade_account.py  test_facade_async.py  test_facade_call.py  test_facade_client.py  test_facade_e2e.py  test_facade_network.py  test_facade_programs.py  test_facade_records.py  test_network_client.py  test_network_client_async.py  test_numeric_parity.py  test_plaintext.py  test_program_keys.py  test_programs.py  test_proving.py  test_proving_request.py  test_record_scanner.py  test_record_scanner_async.py  test_records.py  test_records_extra.py  test_security.py  test_testnet.py  test_types.py  test_value_plaintext.py  test_vectors_extra.py
sdk/python/tests/e2e/: __init__.py  conftest.py  test_devnode_async.py  test_devnode_roundtrip.py  test_devnode_transact.py  test_live_e2e.py  test_testnet_e2e.py  test_testnet_objects_live.py
sdk/python/tests/fixtures/: arc20_token.aleo  arc22_token.aleo  compliant_token_template.aleo  shield_swap_v3.abi.json  test_arc20_eth.aleo  test_usdcx_stablecoin.aleo
sdk/python/tests/vectors/: accounts.json  algorithms.json  execution.json  proving_request.json  records.json
sdk/src/: aleo_account.rs  lib.rs  types.rs
sdk/src/account/: address.rs  compute_key.rs  graph_key.rs  mod.rs  private_key.rs  private_key_ciphertext.rs  record.rs  signature.rs  text.rs  view_key.rs
sdk/src/accounts/: address.rs  compute_key.rs  mod.rs  private_key.rs  signature.rs  view_key.rs
sdk/src/algebra/: boolean.rs  field.rs  group.rs  integer.rs  mod.rs  scalar.rs
sdk/src/algorithms/: mod.rs
sdk/src/algorithms/bhp/: bhp1024.rs  bhp256.rs  bhp512.rs  bhp768.rs  mod.rs
sdk/src/coinbase/: epoch_challenge.rs  mod.rs  prover_solution.rs  puzzle.rs  verifying_key.rs
sdk/src/credits/: mod.rs
sdk/src/network/: mod.rs
sdk/src/programs/: authorization.rs  deployment.rs  dynamic_record.rs  execution.rs  execution_request.rs  fee.rs  identifier.rs  literal.rs  locator.rs  metadata.rs  mod.rs  offline_query.rs  process.rs  program.rs  program_id.rs  proof.rs  proving_key.rs  proving_request.rs  query.rs  response.rs  trace.rs  transaction.rs  transition.rs  value.rs  verifying_key.rs
shield-swap-sdk/: AGENTS.md  README.md  pyproject.toml  pyrightconfig.json  pytest.ini
shield-swap-sdk/codegen/: amm_api.openapi.json  gen_context.py  regen-abi.sh  shield_swap.abi.json
shield-swap-sdk/python/aleo_shield_swap/: AGENTS.md  __init__.py  __main__.py  _api_models.py  _calls.py  _core.py  agent.py  api.py  async_client.py  client.py  derivations.py  errors.py  journal.py  lifecycle.py  mcp.py  profile.py  tick_hints.py  types.py
shield-swap-sdk/scripts/: rehearsal.py
shield-swap-sdk/tests/: test_agent.py  test_api_client.py  test_api_models.py  test_async_client.py  test_blinding.py  test_client_reads.py  test_collect_all.py  test_core.py  test_derivations.py  test_errors.py  test_gen_context.py  test_generated.py  test_journal.py  test_lifecycle.py  test_liquidity.py  test_live_api.py  test_mcp.py  test_package.py  test_profile.py  test_status.py  test_swap.py  test_swap_many.py  test_tick_math.py  test_types.py
shield-swap-sdk/tests/integration/: conftest.py  devnode_amm.py  test_agent_lifecycle_live.py  test_devnode_lifecycle.py  test_reads_live.py  test_swap_lifecycle.py
zkml/: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
zkml/examples/: README.md  requirements.txt
zkml/examples/MLP_neural_networks/: mnist_dataset.ipynb
zkml/examples/decision_trees/: german_credit_dataset.ipynb  iris_dataset.ipynb  mnist_dataset.ipynb
zkml/leotranspiler/: _leo_helper.py
zkml/tests/: .gitignore  helper.py  test_input_generator.py  test_leo_transpiler.py  tmp1.py
zkml/zkml/: __init__.py  _computation_base.py  _helper.py  _input_generator.py  _model_transpiler.py  leo_transpiler.py
(+107 files in other folders)
