# Copyright (C) 2024 Provable Inc.
# SPDX-License-Identifier: GPL-3.0-or-later

[workspace]  # Prevent parent workspace capture

[package]
name = "aleo-abi"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Python bindings for ABI generation from Aleo bytecode (via Leo's leo-abi crate)"

[lib]
name = "_aleo_abi"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py37", "anyhow"] }
serde_json = "1"
leo-abi = { git = "https://github.com/ProvableHQ/leo", rev = "ba2c01722a48f84b4d90b93aeaf8305b7c03dbce", package = "leo-abi", features = ["aleo-bytecode"] }
leo-ast = { git = "https://github.com/ProvableHQ/leo", rev = "ba2c01722a48f84b4d90b93aeaf8305b7c03dbce", package = "leo-ast" }
