# Copyright (C) 2024 Provable Inc.
# SPDX-License-Identifier: GPL-3.0-or-later

[workspace]  # Prevent parent workspace capture

[package]
name = "aleo-abi"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Python bindings for ABI generation from Aleo bytecode (via Leo's leo-abi crate)"

[lib]
name = "_aleo_abi"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
pyo3 = { version = "0.28.3", features = ["extension-module", "abi3-py37", "anyhow"] }
serde_json = "1"
leo-abi = { git = "https://github.com/ProvableHQ/leo", rev = "ba2c01722a48f84b4d90b93aeaf8305b7c03dbce", package = "leo-abi", features = ["aleo-bytecode"] }
leo-ast = { git = "https://github.com/ProvableHQ/leo", rev = "ba2c01722a48f84b4d90b93aeaf8305b7c03dbce", package = "leo-ast" }
leo-disassembler = { git = "https://github.com/ProvableHQ/leo", rev = "ba2c01722a48f84b4d90b93aeaf8305b7c03dbce", package = "leo-disassembler" }
leo-span = { git = "https://github.com/ProvableHQ/leo", rev = "ba2c01722a48f84b4d90b93aeaf8305b7c03dbce", package = "leo-span" }
# Same tag + feature set leo pins, so `Process<N>`/`Program<N>` are the same
# types leo-disassembler's signatures expect.
snarkvm = { git = "https://github.com/ProvableHQ/snarkVM", tag = "v4.8.1", features = ["test_consensus_heights", "dev_skip_checks", "test_targets", "history"] }
