[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "aleo-contract-abi-generator"
version = "0.2.2"
description = "Python bindings for ABI generation from Aleo bytecode"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.7"
dependencies = []

[tool.maturin]
python-source = "python"
module-name = "aleo_abi._aleo_abi"
