[package]
name = "aleo"
authors = ["Konstantin Pandl", "Mike Turner", "Roman Proskuryakov"]
version = "0.2.0"
description = "A Python sdk for zero-knowledge cryptography based on Aleo"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "_aleolib"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
openssl = "0.10"
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py37", "anyhow"] }
rand = { version = "^0.8" }
serde = "1"
serde_json = "1"

snarkvm = { version = "0.16.6", features = ["console"] }
