[package]
name = "aleo"
authors = ["Konstantin Pandl", "Mike Turner", "Roman Proskuryakov"]
version = "0.2.0"
description = "A Python sdk for zero-knowledge cryptography based on Aleo"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "_aleolib"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
indexmap = "2.1.0"
once_cell = "1.18.0"
openssl = "0.10"
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py37", "anyhow"] }
rand = { version = "^0.8" }
serde = "1"
serde_json = "1"

[dependencies.snarkvm]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "01c8b09"
#version = "=0.16.18"
features = [ "console" ]