[package]
name = "aleo"
authors = ["Konstantin Pandl", "Mike Turner", "Roman Proskuryakov"]
version = "0.2.0"
description = "A Python sdk for zero-knowledge cryptography based on Aleo"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
# NOTE: internal crate name only. The importable module name is set by
# pyproject.toml [tool.maturin] module-name + the cfg-gated #[pyo3(name)]
# in src/lib.rs (_aleolib_mainnet / _aleolib_testnet).
name = "_aleolib"
crate-type = ["cdylib"]

[features]
default = ["mainnet"]
mainnet = []
testnet = []

[dependencies]
anyhow = "1"
hex = "0.4"
indexmap = "2.1.0"
once_cell = "1.18.0"
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py37", "anyhow"] }
rand = { version = "0.10" }
serde = "1"
serde_json = "1"
sha2 = "0.10"

snarkvm = { git = "https://github.com/ProvableHQ/snarkVM.git", tag = "v4.8.1", default-features = false, features = [
    "console", "circuit", "synthesizer", "ledger", "utilities", "algorithms", "parameters",
] }

# Mirror snarkvm's profiles: crypto is unusable unoptimized, so dev builds
# get opt-level 3 too (profiles apply from the root crate only — snarkvm's
# own settings are ignored when it builds as a dependency).
[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.dev]
opt-level = 3
lto = "off"
incremental = true
