[project]
name = "aleo-sdk"
description = "Python SDK for building zero-knowledge apps and DeFi on the Aleo network"
version = "0.2.1"
readme = "Readme.md"
license = {file = "LICENSE.md"}
authors = [
    {name = "Konstantin Pandl"},
    {name = "Mike Turner"},
    {name = "Roman Proskuryakov"},
]
classifiers = [  # Optional
  "Programming Language :: Python :: 3",
]

dependencies = ["requests>=2"]

[project.optional-dependencies]
async = ["httpx>=0.27"]
dps = ["pynacl>=1.5"]

[project.urls]
"Homepage" = "https://github.com/AleoHQ/python-sdk"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "aleo._aleolib_mainnet"

[tool.pyright]
reportMissingModuleSource = false # don't report missing aleo.so for CI purposes
# Tests are dynamically-typed pytest code and import deps (pytest) that the
# bare pyright CI environment doesn't install — type-check the package only.
exclude = ['docs', 'python/tests', 'benchmarks', '.env', 'target']
strict = ['python/aleo']
