[project]
name = "shield-swap-sdk"
version = "0.2.1"
description = "Python SDK for the shield swap AMM Dex on Aleo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["aleo-sdk>=0.2", "requests>=2"]

[project.optional-dependencies]
async = ["httpx>=0.27"]
mcp = ["mcp>=1.0"]
dev = ["datamodel-code-generator>=0.25", "pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/aleo_shield_swap"]
