[tool.poetry]
name = "zkml"
version = "0.0.1-beta.1"
description = "A transpiler for Python machine learning models to Leo for zero-knowledge inference"
authors = [
    "Konstantin Pandl <konstantin@aleo.org>",
    "Michael Turner <mturner@aleo.org>"
]
readme = "README.md"
license = "Apache-2.0"
include = ["LICENSE.md"]
repository = "https://github.com/AleoHQ/python-sdk/tree/master/zkml"

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^5.8.0"
numpy = "^1.24.3"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
